--- a/css/main.css
+++ b/css/main.css
@@ -1,74 +1,146 @@
-/* typography.css */
+/* =Reset styles
+-------------------------------------------------------------- */
+html, body { margin: 0; padding: 0; }
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, code, del, dfn, em, img, q, s, samp, small, strike, strong, sub, sup, tt, var, dd, dl, dt, li, ol, ul, fieldset, form, label, legend, button, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; font-weight: normal; font-style: normal; font-size: 100%; font-family: inherit; }
+table { border-collapse: collapse; border-spacing: 0; }
+ol, ul { list-style: none; }
+q:before, q:after, blockquote:before, blockquote:after { content: ""; }
+hr { border: 0; border-bottom: 1px solid #e2e2e2; margin: 2em 0; height: 0; clear: both; }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+
+
+a { text-decoration: none; color: #00B7F1; }
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700,600);
 body {
-	font-size: 75%;
-	color: #555;
-	background:#fff;
-	font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
-	background-color: #0054A6;
+	font-family:'Open Sans','Helvetica Neue',Helvetica,sans-serif;
+	background:#f4f3ef url('/images/banner.jpg') no-repeat center top;font-size:14px;
+	line-height:1.7em;
+	border-bottom:solid 50px #222;
+	margin:0px;
+	color:#444
 }
-h1, h2
-{
-	border: 0;
-	font-weight:normal;
-	color:#111;
-	margin:0;
-	padding:0;
-}
-h1 img, h2 img
-{
+
+.wrapper { width: 90%; max-width: 920px; margin: 0px auto; position: relative; }
+header { overflow: auto; color: #444; background: #fff; height: 3em; line-height: 3em; }
+header .logo { font-size: 1em; color: #444; text-transform: uppercase; display: block; }
+header .logo a { color: #444; float: left; }
+#menu { float: right; border-right: 1px solid rgba(128,128,128,0.2); }
+#menu li { float: left; border-left: 1px solid rgba(128,128,128,0.2); }
+
+nav { position: relative; }
+nav a { font-size: 1em; padding: 0em 1em; display: inline-block; color: #444; text-transform: uppercase; }
+nav a:hover { background: rgba(128,128,128,0.1); }
+
+
+
+header .logo .profile_pic {
 	vertical-align: middle;
 	border: 2px solid black;
 	border-radius: 30px;
 	-moz-border-radius: 30px;
 	-khtml-border-radius: 30px;
-	-webkit-border-radius: 30px;""
-}
-.clear
-{
-	clear:both;
+	-webkit-border-radius: 30px;
 }
 
-#wrapper{
-    background: #fff;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    margin: 150px auto 0;
-    height: auto !important;
-    padding: 30px;
-    position: relative;
-    width: 800px;
+.page {
+	max-width:800px;
+	margin:20px auto;
+	background:#fff;
+	border:solid 1px #d5d2c6;
+	border:solid 1px rgba(0,0,0,.2);
+	padding:60px 100px 60px
 }
-#socialz{
-    border-bottom: 1px solid #CCCCCC;
-    border-top: 1px solid #CCCCCC;
-    margin: 30px 10px;
-    padding: 20px;
+
+h2 {
+	font-size:36px;
+	text-align:center;
+	font-weight:normal;
+	width:1000px;
+	color:#192a35;
+	margin:0px 0px 65px -100px;
+	font-weight:100
 }
-#socialz #socialz_header {
-    color: #777777;
-    font-family: Georgia,Times,Times New Roman,serif;
-    font-size: 1.5em;
-    font-style: italic;
-    text-align: center;
+
+.subheading {
+	width:800px;
+	padding:50px 100px;
+	margin-left:-100px;
+	font-size:18px;
+	line-height:32px;
+	color:#393939;
+	background:#f6f6f5;
+	border:1px
+	solid #e5e5e5;
+	border-left:none;
+	border-right:none;
+	max-width:800px;
+	margin-bottom:60px
 }
-.choice_icons
-{
-	width: 100%;
-	margin: 0px auto;
-	clear: both;
+
+h3 {
+	font-size:30px;
+	font-weight:300;
+	color:#2a2929;
+	margin:50px 0px 20px;
+	line-height:40px
 }
-.choice_icons figure
-{
-		text-align: center;
-		float:left;
+
+h4 {
+	font-size:24px;
+	font-weight:normal;
+	color:#2a2929
 }
-.choice_icons .choice
-{
-	width: 22%;
+
+h4.double_line {
+	text-align:center;
+	font-weight:normal;
+	text-transform:uppercase;
+	color:#393939;
+	font-size:18px
 }
-.choice_icons .choice, .choice_icons .choice a, .choice_icons .choice a:visited, .choice_icons .choice a:hover
-{
-    color: #999999;
-    font-size: 1.3em;
-    text-decoration: none;
+
+p {
+	max-width:500px
+}
+
+hr {
+	border:none;
+	border-bottom:1px solid #e0ddcf;
+	border-top:1px solid #e0ddcf;
+	background:transparent;
+	height:5px;
+	width:1000px;
+	margin:60px 0px 30px -100px;
+	clear:both
+}
+
+.columns {
+	overflow:hidden;
+	padding-bottom: 20px;
+}
+
+.left_column {
+	float:left;
+	width:375px
+}
+
+.right_column {
+	float:right;
+	width:375px
+}
+
+footer {
+	font-size: 75%;
+	margin:20px
+	auto
+}
+
+footer hr {
+	margin-left:0px
+}
+
+.questions li h3 {
+	margin-bottom:0px
 }
