--- a/css/main.css
+++ b/css/main.css
@@ -50,23 +50,36 @@ header .logo .profile_pic {
 	background:#fff;
 	border:solid 1px #d5d2c6;
 	border:solid 1px rgba(0,0,0,.2);
-	padding:60px 100px 60px
+	padding:15px 10px;
+}
+
+@media (min-width: 1024px) { 
+	.page {
+		padding:60px 100px;
+	}
 }
 
 h2 {
+	line-height: 36px;
 	font-size:36px;
 	text-align:center;
 	font-weight:normal;
-	width:1000px;
+	width:100%;
 	color:#192a35;
-	margin:0px 0px 65px -100px;
+	margin:0px 0px 25px 0px;
 	font-weight:100
 }
 
+@media (min-width: 1024px) { 
+	h2 {
+		width:1000px;
+		margin:0px 0px 65px -100px;
+	}
+}
+
 .subheading {
-	width:800px;
-	padding:50px 100px;
-	margin-left:-100px;
+	width:100%;
+	padding:15px 25px;
 	font-size:18px;
 	line-height:32px;
 	color:#393939;
@@ -75,8 +88,15 @@ h2 {
 	solid #e5e5e5;
 	border-left:none;
 	border-right:none;
-	max-width:800px;
 	margin-bottom:60px
+	margin-left: 0px;
+}
+
+@media (min-width: 1024px) { 
+	.subheading {
+		padding:50px 100px;
+		margin-left:-100px;
+	}
 }
 
 h3 {
@@ -99,10 +119,6 @@ h4.double_line {
 	text-transform:uppercase;
 	color:#393939;
 	font-size:18px
-}
-
-p {
-	max-width:500px
 }
 
 hr {
