--- a/css/main.css
+++ b/css/main.css
@@ -1,55 +1,38 @@
-/* =Reset styles
--------------------------------------------------------------- */
-html, body { margin: 0; padding: 0; }
+/* Reset styles */
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, code, del, dfn, em, img, q, s, samp, small, strike, strong, sub, sup, tt, var, dd, dl, dt, li, ol, ul, fieldset, form, label, legend, button, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; font-weight: normal; font-style: normal; font-size: 100%; font-family: inherit; }
-table { border-collapse: collapse; border-spacing: 0; }
 ol, ul { list-style: none; }
-q:before, q:after, blockquote:before, blockquote:after { content: ""; }
-hr { border: 0; border-bottom: 1px solid #e2e2e2; margin: 2em 0; height: 0; clear: both; }
+hr { border: 0; border-bottom: 1px solid #ffad15; margin: 2em 0; height: 0; clear: both; }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 
 
 a { text-decoration: none; color: #00B7F1; }
+a:hover { text-decoration: underline; }
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700,600);
 body {
 	font-family:'Open Sans','Helvetica Neue',Helvetica,sans-serif;
-	background:#f4f3ef url('/images/banner.jpg') no-repeat center top;font-size:14px;
+	background:#444;
+    font-size:14px;
 	line-height:1.7em;
-	border-bottom:solid 50px #222;
 	margin:0px;
-	color:#444
+	color:#f4f3ef;
 }
 
 .wrapper { width: 90%; max-width: 920px; margin: 0px auto; position: relative; }
-header { overflow: auto; color: #444; background: #fff; height: 3em; line-height: 3em; }
-header .logo { font-size: 1em; color: #444; text-transform: uppercase; display: block; }
-header .logo a { color: #444; float: left; }
+header { background-color: #222; overflow: auto; height: 3em; line-height: 3em; border-bottom: 8px solid #ffad15; }
+header a { color: #fff; }
+header .logo { font-size: 1em; text-transform: uppercase; display: block; }
+header .logo a { float: left; }
 #menu { float: right; border-right: 1px solid rgba(128,128,128,0.2); }
 
 nav { position: relative; }
-nav a { font-size: 1em; padding: 0em 1em; display: inline-block; color: #444; text-transform: uppercase; }
+nav a { font-size: 1em; padding: 0em 1em; display: inline-block; text-transform: uppercase; }
 nav a:hover { background: rgba(128,128,128,0.1); }
+header a:hover { text-decoration: none; }
 
 #viewAllMenu {
 	display: none;
-}
-
-@media (max-width: 800px) { 
-	#name {
-		display: none;
-	}
-	#viewAllMenu {
-		display: block;
-	}
-	header {height: auto;}
-	#menuItems {
-		display: none;
-	}
-	.wrapper {
-		width: 100%;
-	}
 }
 
 @media (min-width: 800px) { 
@@ -68,9 +51,6 @@ header .logo .profile_pic {
 .page {
 	max-width:800px;
 	margin:20px auto;
-	background:#fff;
-	border:solid 1px #d5d2c6;
-	border:solid 1px rgba(0,0,0,.2);
 	padding:15px 10px;
 }
 
@@ -86,7 +66,6 @@ h2 {
 	text-align:center;
 	font-weight:normal;
 	width:100%;
-	color:#192a35;
 	margin:0px 0px 25px 0px;
 	font-weight:100
 }
@@ -103,10 +82,7 @@ h2 {
 	padding:15px 25px;
 	font-size:18px;
 	line-height:32px;
-	color:#393939;
-	background:#f6f6f5;
-	border:1px
-	solid #e5e5e5;
+	border:1px solid #ffad15;
 	border-left:none;
 	border-right:none;
 	margin-bottom:60px
@@ -124,7 +100,6 @@ h2 {
 h3 {
 	font-size:30px;
 	font-weight:300;
-	color:#2a2929;
 	margin:50px 0px 20px;
 	line-height:40px
 }
@@ -132,21 +107,19 @@ h3 {
 h4 {
 	font-size:24px;
 	font-weight:normal;
-	color:#2a2929
 }
 
 h4.double_line {
 	text-align:center;
 	font-weight:normal;
 	text-transform:uppercase;
-	color:#393939;
 	font-size:18px
 }
 
 hr {
 	border:none;
-	border-bottom:1px solid #e0ddcf;
-	border-top:1px solid #e0ddcf;
+	border-bottom:1px solid #f4f3ef;
+	border-top:1px solid #f;
 	background:transparent;
 	height:5px;
 	width:1000px;
@@ -158,8 +131,8 @@ hr {
 	overflow:hidden;
 }
 
-.columns .col {
-	padding-bottom: 20px;
+.columns > section {
+	padding-bottom: 25px;
 	padding-left: 3%;
 	float:left;
 	width:47%;
@@ -167,14 +140,56 @@ hr {
 }
 
 footer {
+    background-color: #222;
+    border-top: 8px solid #ffad15;
+    padding-top: 10px;
+    padding-bottom: 10px;
 	font-size: 75%;
-	margin:20px auto;
+	margin:0px auto;
 }
 
-footer hr {
-	margin-left:0px
+footer h5 {
+    display: inline-block;
+    padding-right: 20px;
+}
+footer p {
+    display: inline-block;
 }
 
 .questions li h3 {
 	margin-bottom:0px
 }
+
+blockquote {
+    quotes: "\201C""\201D""\2018""\2019";
+    display: block;
+    background: #444;
+    border-left: 3px solid #ffad15;
+    margin: 0px 0px 10px 0px;
+    padding: 0.5em 10px;
+}
+blockquote:before {
+    content: open-quote;
+}
+blockquote:after {
+    content: close-quote;
+}
+@media (max-width: 800px) { 
+	#name {
+		display: none;
+	}
+	#viewAllMenu {
+		display: block;
+	}
+	header {height: auto;}
+	#menuItems {
+		display: none;
+	}
+	.wrapper {
+		width: 100%;
+	}
+    .projectlist li {
+        width: 100%;
+    }
+}
+
